--- a/law-rag-backend/requirements.txt
+++ b/law-rag-backend/requirements.txt
@@ -2,20 +2,20 @@
 # Python 3.11+
 
 # === Core Framework ===
-fastapi==0.115.0
-uvicorn[standard]==0.32.0
-pydantic==2.9.2
-pydantic-settings==2.6.0
-python-multipart==0.0.12
+fastapi>=0.115.0
+uvicorn[standard]>=0.32.0
+pydantic>=2.9.2
+pydantic-settings>=2.6.0
+python-multipart>=0.0.12
 
 # === Vector Database ===
-qdrant-client==1.12.1
+qdrant-client>=1.12.1  # Not installed. Run: pip install qdrant-client==1.12.1
 
 # === Redis ===
-redis==5.2.0
+redis>=5.2.0
 
 # === LLM - Google Generative AI ===
-google-genai==0.3.0
+google-genai>=0.3.0
 
 # === Embeddings & ML ===
 torch>=2.2.0
@@ -23,7 +23,7 @@ transformers>=4.45.0
 sentence-transformers>=3.3.0
 
 # === Sparse Encoder ===
-fastembed>=0.4.2
+fastembed>=0.4.2  # Not installed. Run: pip install fastembed>=0.4.2
 
 # === PDF Processing ===
 pymupdf>=1.25.0
@@ -34,8 +34,8 @@ langchain-core>=0.3.15
 langchain-text-splitters>=0.3.2
 
 # === Utilities ===
-python-dotenv==1.0.1
-tenacity==9.0.0
+python-dotenv>=1.0.1
+tenacity>=9.0.0
 numpy>=1.26.0
 tqdm>=4.66.0
 
