feat: Add admin interface with dashboard, PDF ingestion, and chat test functionalities, supported by new database and ingestion pipeline modules.

--- a/law-rag-backend/requirements.txt
+++ b/law-rag-backend/requirements.txt
@@ -27,6 +27,7 @@ fastembed>=0.4.2  # Not installed. Run: pip install fastembed>=0.4.2
 
 # === PDF Processing ===
 pymupdf>=1.25.0
+python-bidi>=0.4.2  # RTL text handling for Arabic PDFs
 
 # === LangChain (for text processing utilities) ===
 langchain>=0.3.7
